# llm-zoomcamp-2026-code

./: agents.ipynb  homework.ipynb  ingest.py  notebook.ipynb  persistent_rag_ingest.ipynb  project1.ipynb  pyproject.toml  rag_helper.py  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
llm-zoomcamp-hw2/: hw2.ipynb
