[project]
name = "llm-zoomcamp-2026-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.41.0",
    "openai-agents>=0.17.5",
    "psycopg[binary]>=3.3.4",
    "pydantic-ai>=1.107.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.0",
    "toyaikit>=0.0.11",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.6.9",
]
